--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,11 @@ jobs:
       - name: Install Dependencies
         run: uv sync
       - name: Run linting
-        run: uv run poe lint
+        run: uv run ruff check .
+      - name: Check formatting
+        run: uv run ruff format . --check
       - name: Run type checking
-        run: uv run poe typecheck
+        run: uv run mypy .
 
   test:
     name: Test
