--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,9 @@ jobs:
       - name: Install Dependencies
         run: uv sync
       - name: Run linting
-        run: uv run ruff check .
+        run: uvx ruff check .
       - name: Check formatting
-        run: uv run ruff format . --check
+        run: uvx ruff format . --check
       - name: Run type checking
         run: uv run mypy .
 
