--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Check formatting
         run: uvx ruff format . --check
       - name: Run type checking
-        run: uv run mypy .
+        run: uvx mypy .
 
   test:
     name: Test
