Feat/fly deployment updates (#346)
* feat: update Fly.io deployment configuration

- Fix Dockerfile Doppler CLI installation using modern gpg method
- Add health check endpoint at /health/ for Fly.io monitoring
- Update fly.toml with proper VM config and Doppler integration
- Fix ALLOWED_HOSTS to allow Fly internal health check IPs
- Remove deprecated [experimental] section from fly.ephemeral.toml
- Add explicit memory settings for app and worker VMs

* ci: improve GitHub Actions workflows

- Add test job before deploy to ensure only passing code is deployed
- Add workflow_dispatch for manual deployments
- Add post-deployment health check verification
- Split CI into separate lint and test jobs for faster feedback
- Add explicit --wait-timeout for deployment
- Improve concurrency settings to prevent deployment conflicts

* docs: update CHANGELOG with deployment improvements

* fix(ci): run ruff and mypy directly with uv run

Poe tasks run commands without the venv, so ruff/mypy aren't found.
Use 'uv run' directly to ensure tools are executed from the venv.

* fix(ci): use uvx for ruff to run without installation

uvx downloads and runs tools directly without needing them
as project dependencies.

* fix(ci): use uvx for mypy as well

* fix(ci): use pre-commit action for linting

pre-commit already has all hooks properly configured with correct
environments for ruff, mypy, etc. Using the official pre-commit
action ensures consistency with local development.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,12 +2,29 @@ name: CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
-  build:
+  lint:
+    name: Lint & Type Check
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.14'
+      - name: Install uv
+        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+      - name: Install Dependencies
+        run: uv sync
+      - name: Run pre-commit checks
+        uses: pre-commit/action@v3.0.1
+
+  test:
+    name: Test
     runs-on: ubuntu-latest
     services:
       redis:
@@ -23,7 +40,7 @@ jobs:
         image: postgres:18
         env:
           POSTGRES_USER: ciuser
-          POSTGRES_PASSWORD: ${{secrets.POSTGRES_PASSWORD}}
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
           POSTGRES_DB: role-play
         ports:
           - 5432:5432
@@ -33,24 +50,24 @@ jobs:
           --health-timeout 5s
           --health-retries 5
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.14'
-    - name: Install Doppler CLI
-      uses: dopplerhq/cli-action@v3
-    - name: Install Dependencies
-      run: |
-        curl -LsSf https://astral.sh/uv/install.sh | sh
-        uv sync
-    - name: Run Tests
-      run: |
-        doppler run -- uv run poe test-cov
-        uv run poe test-cov-report-xml
-      env:
-        DOPPLER_TOKEN: ${{ secrets.DOPPLER_TOKEN }}
-    - name: Upload coverage reports to Codecov
-      uses: codecov/codecov-action@v5
-      env:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.14'
+      - name: Install Doppler CLI
+        uses: dopplerhq/cli-action@v3
+      - name: Install uv
+        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+      - name: Install Dependencies
+        run: uv sync
+      - name: Run Tests with Coverage
+        run: |
+          doppler run -- uv run poe test-cov
+          uv run poe test-cov-report-xml
+        env:
+          DOPPLER_TOKEN: ${{ secrets.DOPPLER_TOKEN }}
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
