fix: disable celery pytest plugin explicitly

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,5 +4,5 @@
 [pytest]
 asyncio_default_fixture_loop_scope = session
 python_files = test_*.py *_test.py testing/python/*.py
-addopts = -n auto --dist loadfile
+addopts = -n auto --dist loadfile -p no:celery
 DJANGO_SETTINGS_MODULE = role_play.settings.test
